# Whanos

./: .gitignore  README.md  Readme.md  run.sh
.github/workflows/: mirror.yml
ansible/: .gitignore  README.md  ansible.cfg  install_K_s.yml  inventory  inventory.ini  parse_ips.py  playbook.yml  requirements.yml  run.sh  setup.sh  sshd_config
ansible/group_vars/: all.yml
docker/c-images/: Dockerfile
docker/java-images/: Dockerfile
docker/js-images/: Dockerfile
docker/python-images/standalone/: Dockerfile
docs/: docAnsible.md  docDebug.md  docJenkins.md  docKubernetes.md  docTerraform.md  dockerDocs.md  registry.md
images/befunge/: Dockerfile.base  Dockerfile.standalone
images/brainfuck/: Dockerfile.base  Dockerfile.standalone
images/c/: Dockerfile.base  Dockerfile.standalone
images/cpp/: Dockerfile.base  Dockerfile.standalone
images/go/: Dockerfile.base  Dockerfile.standalone
images/java/: Dockerfile.base  Dockerfile.standalone
images/javascript/: Dockerfile.base  Dockerfile.standalone
images/python/: Dockerfile.base  Dockerfile.standalone
images/rust/: Dockerfile.base  Dockerfile.standalone
jenkins/: Dockerfile  build.sh  casc.yml  docker-compose.yaml  job_dsl.groovy  my_marvin.yml  plugins.txt
kubernetes/: generate_kubernetes_cluster.py
registry/: docker-compose.yaml  test_push.txt
terraform/: main.tf  output.tf  terraform.tfvars  variables.tf
whanos_example_apps/cpp-hello-world/: CMakeLists.txt
whanos_example_apps/cpp-hello-world/app/: hello.cpp
whanos_example_apps/rust-hello-world/: Cargo.toml
(+21 files in other folders)
